fixes and upgrades (#12)
* refactor: replace custom URL with native URI class

* fix: RMI

* refactor: protocol specifics and send and receive

* fix: unused logic

* chore: cleanup